# gst-framesaver

./: .gitignore  README.md  framesaver.bat  meson.build  ori_framesaver.bat  pipeline.bat
docs/: gstsharedmetadata.pc
gst-metadata/: gstsharedmetadata.c  gstsharedmetadata.h  meson.build
gst-pintel-plugins/: meson.build
gst-pintel-plugins/printmeta/: gstprintmeta.c  gstprintmeta.h  meson.build
gst-pintel-plugins/videomux/: gstframesaver.c  gstframesaver.h  gstvideomux.c  gstvideomux.h  meson.build
gst-plugin/: meson.build
gst-plugin/src/: gstframesaver.c  gstframesaver.h
